--- a/backend/.env
+++ b/backend/.env
@@ -40,7 +40,7 @@ MAILER_DSN=null://null
 ###< symfony/mailerr ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://(localhost(:[0-9]+)?|127\.0\.0\.1(:[0-9]+)?|honeydew-loris-986340\.hostingersite\.com)$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
