--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -9,7 +9,7 @@ nelmio_cors:
         max_age: 3600
     paths:
         '^/api/':
-            allow_origin: ['http://localhost:5173']
+            allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
             allow_headers: ['*']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'PATCH']
             max_age: 3600
